--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
               </a>
             </li>
             <li class="navigation__item navigation-user__item">
-              <a class="navigation__link navigation-user__link" href="#">
+              <a class="navigation__link navigation-user__link navigation-user__link--login" href="#">
                 <svg class="navigation__icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M9 1.67c0-.37.3-.67.67-.67h2.66a2 2 0 0 1 2 2v9.33a2 2 0 0 1-2 2H9.67a.67.67 0 1 1 0-1.33h2.66a.67.67 0 0 0 .67-.67V3a.67.67 0 0 0-.67-.67H9.67A.67.67 0 0 1 9 1.67Zm-3.14 2.2a.67.67 0 0 1 .94 0l3.33 3.32a.69.69 0 0 1 .13.18.66.66 0 0 1-.13.77L6.8 11.47a.67.67 0 1 1-.94-.94l2.2-2.2h-6.4a.67.67 0 1 1 0-1.33h6.4l-2.2-2.2a.67.67 0 0 1 0-.94Z" fill="#2d3440"/></svg>
                 <span>Вход</span>
               </a>
             </li>
             <li class="navigation__item navigation-user__item">
-              <a class="navigation__link navigation-user__link" href="#">
+              <a class="navigation__link navigation-user__link navigation-user__link--cart" href="#">
                 <svg class="navigation__icon" xmlns="http://www.w3.org/2000/svg" width="16" height="17" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 2.1a.67.67 0 0 0 0 1.34h1.77l.47 2.34v.05l.97 4.83a1.83 1.83 0 0 0 1.82 1.47h5.62a1.83 1.83 0 0 0 1.82-1.47l.93-4.86a.67.67 0 0 0-.66-.8h-9.3l-.47-2.36a.67.67 0 0 0-.66-.53H1.17Zm4.52 8.3-.81-4.06h8.23l-.78 4.07a.5.5 0 0 1-.49.39H6.18a.5.5 0 0 1-.49-.4Zm-1.13 3.96a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#2d3440"/></svg>
                 <span class="visually-hidden">Корзина</span>
                 <span>2 товара</span>
@@ -53,7 +53,25 @@
         </nav>
       </div>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <h1 class="visually-hidden">Магазин Глейси – магазин по продаже мороженого собственного производства на развес</h1>
+      <section class="slider">
+        <h2 class="slider__header">Нежный пломбир
+          с клубничным джемом</h2>
+        <p class="slider__description">Натуральное мороженое из свежих сливок
+          и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи. </p>
+        <button class="button" type="button">Заказать</button>
+      </section>
+      <section class="banners"></section>
+      <section class="goods"></section>
+      <section class="description"></section>
+      <div class="newsletter-container">
+        <article class="news"></article>
+        <section class="newsletter"></section>
+      </div>
+      <section class="delivery"></section>
+      <section class="contacts"></section>
+    </main>
     <footer class="footer">footer</footer>
   </body>
 </html>
