--- a/index.html
+++ b/index.html
@@ -56,22 +56,218 @@
     <main class="main">
       <h1 class="visually-hidden">Магазин Глейси – магазин по продаже мороженого собственного производства на развес</h1>
       <section class="slider">
-        <h2 class="slider__header">Нежный пломбир
-          с клубничным джемом</h2>
-        <p class="slider__description">Натуральное мороженое из свежих сливок
-          и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи. </p>
-        <button class="button" type="button">Заказать</button>
+        <div class="slider__description">
+          <h2 class="slider__title">Нежный пломбир
+            с клубничным джемом</h2>
+          <p class="slider__text">Натуральное мороженое из свежих сливок
+            и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи. </p>
+          <button class="button" type="button">Заказать</button>
+        </div>
+        <div class="slider__slideshow">
+          <div class="slider__slide-container">
+            <img src="img/strawberyy-ice-cream.png" alt="Нежный пломбир
+            с клубничным джемом" width="327" height="507">
+            <button class="slider__button-arrow" type="button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="17" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M9.71 13.14a.67.67 0 0 0 .94-.95L6.45 8l4.2-4.2a.66.66 0 0 0-.94-.94L5.04 7.52a.66.66 0 0 0 0 .94l4.67 4.68Z" fill="#FCFCFC"/></svg>
+              <span class="visually-hidden">Показать предыдущее изображение</span>
+            </button>
+            <button class="slider__button-arrow" type="button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="17" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M7.29 2.86a.66.66 0 1 0-.94.95l4.2 4.2-4.2 4.2a.67.67 0 0 0 .94.94l4.67-4.67a.66.66 0 0 0 0-.94L7.3 2.86Z" fill="#FCFCFC"/></svg>
+              <span class="visually-hidden">Показать следующее изображение</span>
+            </button>
+          </div>
+          <img src="img/banana-ice-cream.png" alt="Сливочное мороженое со вкусом банана" width="66" height="150">
+          <img src="/img/caramel-ice-cream.png" alt="Карамельный пломбир
+          с маршмеллоу" width="66" height="150">
+        </div>
+        <div class="slider__bullets">
+          <button class="slider__bullet slider__bullet--current">
+            <span class="visually-hidden">1</span>
+          </button>
+          <button class="slider__bullet">
+            <span class="visually-hidden">2</span>
+          </button>
+          <button class="slider__bullet">
+            <span class="visually-hidden">3</span>
+          </button>
+        </div>
+        <div class="slider__social social">
+          <a href="#" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M26 14a12 12 0 1 1-24 0 12 12 0 0 1 24 0Zm-11.57-3.14c-1.17.48-3.5 1.49-7 3.01-.57.23-.86.45-.9.67-.04.36.42.5 1.04.7l.27.08c.6.2 1.43.44 1.86.45.39 0 .82-.16 1.3-.48 3.27-2.21 4.96-3.33 5.06-3.35.08-.02.18-.04.25.02.07.07.07.18.06.22-.05.19-1.84 1.86-2.77 2.72a28.24 28.24 0 0 0-.82.79c-.57.54-1 .96.02 1.63.5.32.89.59 1.28.85a88.77 88.77 0 0 0 1.8 1.23c.5.35.95.67 1.5.62.32-.03.66-.33.82-1.23.4-2.13 1.18-6.73 1.36-8.63.01-.16 0-.31-.02-.47a.5.5 0 0 0-.17-.33.78.78 0 0 0-.46-.14c-.46.01-1.15.25-4.48 1.64Z" fill="#FCFCFC"/><rect x="1" y="1" width="26" height="26" rx="13" stroke="#FCFCFC" stroke-opacity=".3" stroke-width="2"/></svg>
+            <span class="visually-hidden">Телеграм</span>
+          </a>
+          <a href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M26 14a12 12 0 1 1-24 0 12 12 0 0 1 24 0Zm-11.41 2.97h-.72s-1.58.09-2.98-1.18c-1.52-1.39-2.86-4.14-2.86-4.14s-.07-.18 0-.27c.1-.1.36-.1.36-.1l1.72-.01s.16.02.27.1c.1.05.15.17.15.17s.28.61.65 1.17c.71 1.08 1.05 1.32 1.29 1.2.35-.16.25-1.53.25-1.53s0-.5-.18-.71c-.14-.17-.41-.22-.53-.24-.1-.01.06-.2.26-.3.31-.13.86-.13 1.5-.13.5 0 .65.03.84.07.46.1.44.41.41 1.08l-.02.7v.18c-.01.34-.02.73.23.88.13.07.45 0 1.26-1.19.38-.56.66-1.23.66-1.23s.07-.12.16-.17c.1-.05.24-.04.24-.04h1.8s.54-.06.63.15c.1.23-.2.75-.94 1.61-.7.82-1.03 1.12-1 1.38.01.2.23.38.66.72.89.73 1.13 1.1 1.18 1.2l.01.01c.4.58-.44.62-.44.62l-1.6.02s-.34.06-.8-.2a3.94 3.94 0 0 1-.69-.6c-.33-.34-.65-.66-.91-.58-.45.12-.44.96-.44.96s0 .18-.1.28c-.1.1-.32.12-.32.12Z" fill="#FCFCFC"/><rect x="1" y="1" width="26" height="26" rx="13" stroke="#FCFCFC" stroke-opacity=".3" stroke-width="2"/></svg>
+            <span class="visually-hidden">ВКонтакте</span>
+          </a>
+          <a href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"><path d="m16 13.8-2.8-1.32c-.25-.11-.45.01-.45.29v2.46c0 .28.2.4.45.29L16 14.2c.25-.12.25-.3 0-.42ZM14 2a12 12 0 1 0 0 24 12 12 0 0 0 0-24Zm0 16.88c-6.14 0-6.25-.56-6.25-4.88s.1-4.88 6.25-4.88c6.14 0 6.25.56 6.25 4.88s-.1 4.88-6.25 4.88Z" fill="#FCFCFC"/><rect x="1" y="1" width="26" height="26" rx="13" stroke="#FCFCFC" stroke-opacity=".3" stroke-width="2"/></svg>
+            <span class="visually-hidden">Ютьюб</span>
+          </a>
+        </div>
       </section>
-      <section class="banners"></section>
-      <section class="goods"></section>
-      <section class="description"></section>
+      <section class="banners">
+        <h2 class="banners__title">Заказывайте мороженое и получайте подарки!</h2>
+        <div class="banners__banner banner">
+          <h3 class="banner__title">Малинка даром!</h3>
+          <p class="banner__description">При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку малинового варенья бесплатно.</p>
+          <button class="button" type="button">Хочу подарок</button>
+        </div>
+        <div class="banners__banner banner">
+          <h3 class="banner__title">Маршмеллоу даром!</h3>
+          <p class="banner__description">При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
+          <button class="button" type="button">Хочу подарок</button>
+        </div>
+      </section>
+      <section class="goods">
+        <h2 class="goods__title">Попробуйте самые популярные вкусы нашего мороженого</h2>
+        <ul class="goods__list">
+          <li class="goods__item">
+            <img src="img/goods-raspberry-ice-cream.svg" alt="Сливочное мороженое с малиновым джемом" width="168" height="168">
+            <h3 class="goods__item-title">Малинка</h3>
+            <p class="goods__item-description">Сливочное мороженое с малиновым джемом</p>
+            <span class="goods__item-price">310 ₽/кг</span>
+            <button type="button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
+              <span class="visually-hidden">Добавить в корзину</span>
+            </button>
+          </li>
+          <li class="goods__item">
+            <img src="img/goods-pistachio-ice-cream.png" alt="Фисташковый пломбир с кусочками шоколада" width="168" height="168">
+            <h3 class="goods__item-title">Фисташка</h3>
+            <p class="goods__item-description">Фисташковый пломбир с кусочками шоколада</p>
+            <span class="goods__item-price">340 ₽/кг</span>
+            <button type="button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
+              <span class="visually-hidden">Добавить в корзину</span>
+            </button>
+          </li>
+          <li class="goods__item">
+            <img src="img/goods-blueberry-ice-cream.png" alt="Крем-брюле
+            с черничным джемом" width="168" height="168">
+            <h3 class="goods__item-title">Черника</h3>
+            <p class="goods__item-description">Крем-брюле
+              с черничным джемом</p>
+            <span class="goods__item-price">330 ₽/кг</span>
+            <button type="button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
+              <span class="visually-hidden">Добавить в корзину</span>
+            </button>
+          </li>
+          <li class="goods__item">
+            <img src="img/goods-bubble-gum-ice-cream.png" alt="Ванильный пломбир
+            со сладкой посыпкой" width="168" height="168">
+            <h3 class="goods__item-title">Бабл-гам</h3>
+            <p class="goods__item-description">Ванильный пломбир
+              со сладкой посыпкой</p>
+            <span class="goods__item-price">320 ₽/кг</span>
+            <button type="button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
+              <span class="visually-hidden">Добавить в корзину</span>
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section class="description">
+        <h2 class="description__title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+        <ul class="description__list">
+          <li class="description__item">Всё наше мороженое изготавливается на собственном производстве с использованием современного оборудования и проверенных временем технологий.</li>
+          <li class="description__item">Закупка ингредиентов производится только
+          у проверенных фермерских хозяйств, с которыми
+          нас связывает долговременное сотрудничество.</li>
+          <li class="description__item">Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты и добавки произведены из натурального сырья.</li>
+          <li class="description__item">Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.</li>
+        </ul>
+      </section>
       <div class="newsletter-container">
-        <article class="news"></article>
-        <section class="newsletter"></section>
+        <article class="news">
+          <h3 class="news__title">Новое в нашем блоге</h3>
+          <p class="news__name">10 способов сервировки фруктовых щербетов к столу</p>
+        </article>
+        <section class="newsletter">
+          <h3 class="visually-hidden">Подпишитесь на нашу рассылку</h3>
+          <p class="newsletter__description">Подпишитесь на нашу сладкую рассылку и будьте всегда
+          в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+          <form action="" method="post" class="newsletter__form">
+            <input type="email" name="email" placeholder="email@example.com">
+            <button type="submit">Отправить</button>
+          </form>
+        </section>
       </div>
-      <section class="delivery"></section>
-      <section class="contacts"></section>
+      <section class="delivery">
+        <div class="delivery__info">
+          <h2 class="delivery__title">Доставка любимого мороженого на дом</h2>
+          <p class="delivery__description">Хочется полакомиться любимым десертом, но нет времени съездить в магазин? Закажите доставку мороженого на дом, и курьер привезёт вам ваш заказ в течение часа!</p>
+        </div>
+        <form action="" method="post" class="delivery__form">
+          <p class="delivery__text">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</p>
+          <label>Дата
+            <span>
+              <span class="visually-hidden">Дополнительная информация</span>
+            </span>
+            <input type="text" name="date" id="date" placeholder="01.04.2020">
+          </label>
+          <label>Телефон
+            <input type="tel" name="phone" placeholder="+7 800 999-00-00">
+          </label>
+          <label>Адрес
+            <span>
+              <span class="visually-hidden">Дополнительная информация</span>
+            </span>
+            <input type="text" name="address" placeholder="ул. Большая Конюшенная, 19/8">
+          </label>
+          <button type="submit">Отправить</button>
+        </form>
+      </section>
+      <section class="contacts">
+        <h2 class="visually-hidden">Наши контакты</h2>
+        <p class="contacts__text">Адрес главного офиса и офлайн-магазина:</p>
+        <p class="contacts__address">наб. реки Карповки, 5 лит П, Санкт-Петербург</p>
+        <p class="contacts__text">Для заказов по телефону:</p>
+        <a href="tel:+78128121212" class="contacts__phone">+7 (812) 812-12-12</a>
+        <p class="contacts__extra-info">(с 10 до 20 ежедневно)</p>
+        <a href="#" class="button button--extra">Форма обратной связи</a>
+      </section>
     </main>
-    <footer class="footer">footer</footer>
+    <footer class="footer">
+      <div class="footer__social social">
+        <a href="https://t.me/htmlacademy" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M26 14a12 12 0 1 1-24 0 12 12 0 0 1 24 0Zm-11.57-3.14c-1.17.48-3.5 1.49-7 3.01-.57.23-.86.45-.9.67-.04.36.42.5 1.04.7l.27.08c.6.2 1.43.44 1.86.45.39 0 .82-.16 1.3-.48 3.27-2.21 4.96-3.33 5.06-3.35.08-.02.18-.04.25.02.07.07.07.18.06.22-.05.19-1.84 1.86-2.77 2.72a28.24 28.24 0 0 0-.82.79c-.57.54-1 .96.02 1.63.5.32.89.59 1.28.85a88.77 88.77 0 0 0 1.8 1.23c.5.35.95.67 1.5.62.32-.03.66-.33.82-1.23.4-2.13 1.18-6.73 1.36-8.63.01-.16 0-.31-.02-.47a.5.5 0 0 0-.17-.33.78.78 0 0 0-.46-.14c-.46.01-1.15.25-4.48 1.64Z" fill="#FCFCFC"/><rect x="1" y="1" width="26" height="26" rx="13" stroke="#FCFCFC" stroke-opacity=".3" stroke-width="2"/></svg>
+          <span class="visually-hidden">Телеграм</span>
+        </a>
+        <a href="https://vk.com/htmlacademy" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M26 14a12 12 0 1 1-24 0 12 12 0 0 1 24 0Zm-11.41 2.97h-.72s-1.58.09-2.98-1.18c-1.52-1.39-2.86-4.14-2.86-4.14s-.07-.18 0-.27c.1-.1.36-.1.36-.1l1.72-.01s.16.02.27.1c.1.05.15.17.15.17s.28.61.65 1.17c.71 1.08 1.05 1.32 1.29 1.2.35-.16.25-1.53.25-1.53s0-.5-.18-.71c-.14-.17-.41-.22-.53-.24-.1-.01.06-.2.26-.3.31-.13.86-.13 1.5-.13.5 0 .65.03.84.07.46.1.44.41.41 1.08l-.02.7v.18c-.01.34-.02.73.23.88.13.07.45 0 1.26-1.19.38-.56.66-1.23.66-1.23s.07-.12.16-.17c.1-.05.24-.04.24-.04h1.8s.54-.06.63.15c.1.23-.2.75-.94 1.61-.7.82-1.03 1.12-1 1.38.01.2.23.38.66.72.89.73 1.13 1.1 1.18 1.2l.01.01c.4.58-.44.62-.44.62l-1.6.02s-.34.06-.8-.2a3.94 3.94 0 0 1-.69-.6c-.33-.34-.65-.66-.91-.58-.45.12-.44.96-.44.96s0 .18-.1.28c-.1.1-.32.12-.32.12Z" fill="#FCFCFC"/><rect x="1" y="1" width="26" height="26" rx="13" stroke="#FCFCFC" stroke-opacity=".3" stroke-width="2"/></svg>
+          <span class="visually-hidden">ВКонтакте</span>
+        </a>
+        <a href="https://www.youtube.com/user/htmlacademyru" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"><path d="m16 13.8-2.8-1.32c-.25-.11-.45.01-.45.29v2.46c0 .28.2.4.45.29L16 14.2c.25-.12.25-.3 0-.42ZM14 2a12 12 0 1 0 0 24 12 12 0 0 0 0-24Zm0 16.88c-6.14 0-6.25-.56-6.25-4.88s.1-4.88 6.25-4.88c6.14 0 6.25.56 6.25 4.88s-.1 4.88-6.25 4.88Z" fill="#FCFCFC"/><rect x="1" y="1" width="26" height="26" rx="13" stroke="#FCFCFC" stroke-opacity=".3" stroke-width="2"/></svg>
+          <span class="visually-hidden">Ютьюб</span>
+        </a>
+      </div>
+      <nav class="footer__navigation">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a href="#" class="footer__link footer__link--current">Для поставщиков</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">Наши документы</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">О производстве</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">Экологические стандарты</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="footer__credits">
+        <a href="https://htmlacademy.ru/" target="_blank" class="footer__html-academy-logo">
+          <img src="img/logo-htmlacademy.svg" alt="Логотип HTML-академии" width="93" height="26">
+        </a>
+        <p class="credits__description">Сделано в
+          <a href="https://htmlacademy.ru/" target="_blank">.html academy</a>
+          &copy; 2021</p>
+      </div>
+    </footer>
   </body>
 </html>
