--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navigation navigation-site">
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a class="navigation__link navigation__link--catalog" href="#">Каталог</a>
+              <a class="navigation__link navigation__link--catalog" href="catalog.html">Каталог</a>
               <span class="visually-hidden">Открыть дополнительное меню каталога</span>
             </li>
             <li class="navigation__item">
@@ -188,7 +188,7 @@
           <h3 class="visually-hidden">Подпишитесь на нашу рассылку</h3>
           <p class="newsletter__description">Подпишитесь на нашу сладкую рассылку и будьте всегда
           в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-          <form action="" method="post" class="newsletter__form">
+          <form action="https://echo.htmlacademy.ru/" method="post" class="newsletter__form">
             <input type="email" name="email" placeholder="email@example.com">
             <button type="submit">Отправить</button>
           </form>
@@ -199,7 +199,7 @@
           <h2 class="delivery__title">Доставка любимого мороженого на дом</h2>
           <p class="delivery__description">Хочется полакомиться любимым десертом, но нет времени съездить в магазин? Закажите доставку мороженого на дом, и курьер привезёт вам ваш заказ в течение часа!</p>
         </div>
-        <form action="" method="post" class="delivery__form">
+        <form action="https://echo.htmlacademy.ru/" method="post" class="delivery__form">
           <p class="delivery__text">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</p>
           <label>Дата
             <span>
@@ -260,7 +260,7 @@
           </li>
         </ul>
       </nav>
-      <div class="footer__credits">
+      <div class="footer__credits credits">
         <a href="https://htmlacademy.ru/" target="_blank" class="footer__html-academy-logo">
           <img src="img/logo-htmlacademy.svg" alt="Логотип HTML-академии" width="93" height="26">
         </a>
