--- a/catalog.html
+++ b/catalog.html
@@ -69,6 +69,7 @@
     </header>
     <h1 class="main__title">Сливочное мороженое</h1>
     <section class="filter">
+      <h2 class="visually-hidden">Фильтры для сортировки мороженого на странице</h2>
       <form class="filter__form" action="https://echo.htmlacademy.ru/" method="get">
         <fieldset class="filter__group">
           <legend class="visually-hidden">Сортировка</legend>
@@ -170,7 +171,7 @@
               </li>
             </ul>
         </fieldset>
-        <button class="button button__light" type="submit">Применить</button>
+        <button class="button button--light" type="submit">Применить</button>
       </form>
     </section>
     <section class="goods">
