Стилизация секции с баннерами, проверка по pixel perfect

--- a/index.html
+++ b/index.html
@@ -124,16 +124,18 @@
           </ul>
         </section>
         <section class="banners">
-          <h2 class="banners__title">Заказывайте мороженое и получайте подарки!</h2>
-          <div class="banners__banner banner">
-            <h3 class="banner__title">Малинка даром!</h3>
-            <p class="banner__description">При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку малинового варенья бесплатно.</p>
-            <button class="button" type="button">Хочу подарок</button>
-          </div>
-          <div class="banners__banner banner">
-            <h3 class="banner__title">Маршмеллоу даром!</h3>
-            <p class="banner__description">При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
-            <button class="button" type="button">Хочу подарок</button>
+          <h2 class="banners__title">Заказывайте мороженое <br> и получайте подарки!</h2>
+          <div class="banners__container">
+            <div class="banner banner--raspberry">
+              <h3 class="banner__title">Малинка даром!</h3>
+              <p class="banner__description">При покупке 2 кг любого фруктового мороженого добавим в ваш заказ <br> банку малинового варенья бесплатно.</p>
+              <button class="button button--primary" type="button">Хочу подарок</button>
+            </div>
+            <div class="banner banner--marshmallow">
+              <h3 class="banner__title">Маршмеллоу даром!</h3>
+              <p class="banner__description">При покупке 2 кг пломбира добавим <br> в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
+              <button class="button button--primary" type="button">Хочу подарок</button>
+            </div>
           </div>
         </section>
         <section class="goods">
