--- a/index.html
+++ b/index.html
@@ -142,45 +142,57 @@
           <h2 class="goods__title">Попробуйте самые популярные вкусы нашего мороженого</h2>
           <ul class="goods__list">
             <li class="goods__item">
-              <img src="img/goods-raspberry-ice-cream.svg" alt="Сливочное мороженое с малиновым джемом" width="168" height="168">
+              <img class="goods__image" src="img/goods-raspberry-ice-cream.svg" alt="Сливочное мороженое с малиновым джемом" width="168" height="168">
               <h3 class="goods__item-title">Малинка</h3>
               <p class="goods__item-description">Сливочное мороженое с малиновым джемом</p>
-              <span class="goods__item-price">310 ₽/кг</span>
-              <button type="button">
+              <p class="goods__price-container">
+                <span class="goods__price">310</span>
+                <span class="goods__price-type">₽/кг</span>
+              </p>
+              <button class="goods__cart-button" type="button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
                 <span class="visually-hidden">Добавить в корзину</span>
               </button>
             </li>
             <li class="goods__item">
-              <img src="img/goods-pistachio-ice-cream.png" alt="Фисташковый пломбир с кусочками шоколада" width="168" height="168">
+              <img class="goods__image" src="img/goods-pistachio-ice-cream.png" alt="Фисташковый пломбир с кусочками шоколада" width="168" height="168">
               <h3 class="goods__item-title">Фисташка</h3>
               <p class="goods__item-description">Фисташковый пломбир с кусочками шоколада</p>
-              <span class="goods__item-price">340 ₽/кг</span>
-              <button type="button">
+              <p class="goods__price-container">
+                <span class="goods__price">340</span>
+                <span class="goods__price-type">₽/кг</span>
+              </p>
+              <button class="goods__cart-button" type="button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
                 <span class="visually-hidden">Добавить в корзину</span>
               </button>
             </li>
             <li class="goods__item">
-              <img src="img/goods-blueberry-ice-cream.png" alt="Крем-брюле
+              <img class="goods__image" src="img/goods-blueberry-ice-cream.png" alt="Крем-брюле
               с черничным джемом" width="168" height="168">
               <h3 class="goods__item-title">Черника</h3>
-              <p class="goods__item-description">Крем-брюле
+              <p class="goods__item-description">Крем-брюле <br>
                 с черничным джемом</p>
-              <span class="goods__item-price">330 ₽/кг</span>
-              <button type="button">
+                <p class="goods__price-container">
+                  <span class="goods__price">330</span>
+                  <span class="goods__price-type">₽/кг</span>
+                </p>
+              <button class="goods__cart-button" type="button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
                 <span class="visually-hidden">Добавить в корзину</span>
               </button>
             </li>
             <li class="goods__item">
-              <img src="img/goods-bubble-gum-ice-cream.png" alt="Ванильный пломбир
+              <img class="goods__image" src="img/goods-bubble-gum-ice-cream.png" alt="Ванильный пломбир
               со сладкой посыпкой" width="168" height="168">
               <h3 class="goods__item-title">Бабл-гам</h3>
-              <p class="goods__item-description">Ванильный пломбир
+              <p class="goods__item-description">Ванильный пломбир <br>
                 со сладкой посыпкой</p>
-              <span class="goods__item-price">320 ₽/кг</span>
-              <button type="button">
+              <p class="goods__price-container">
+                <span class="goods__price">320</span>
+                <span class="goods__price-type">₽/кг</span>
+              </p>
+              <button class="goods__cart-button" type="button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
                 <span class="visually-hidden">Добавить в корзину</span>
               </button>
