стилизация секции description, проверка с pixel perfect, начата стилизация news

--- a/index.html
+++ b/index.html
@@ -200,20 +200,22 @@
           </ul>
         </section>
         <section class="description">
-          <h2 class="description__title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
-          <ul class="description__list">
-            <li class="description__item">Всё наше мороженое изготавливается на собственном производстве с использованием современного оборудования и проверенных временем технологий.</li>
-            <li class="description__item">Закупка ингредиентов производится только
-            у проверенных фермерских хозяйств, с которыми
-            нас связывает долговременное сотрудничество.</li>
-            <li class="description__item">Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты и добавки произведены из натурального сырья.</li>
-            <li class="description__item">Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.</li>
-          </ul>
+          <div class="description__content">
+            <h2 class="description__title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+            <ul class="description__list">
+              <li class="description__item description__item--ice-cream">Всё наше мороженое изготавливается на собственном производстве с использованием современного оборудования и проверенных временем технологий.</li>
+              <li class="description__item description__item--cow">Закупка ингредиентов производится только <br>
+              у проверенных фермерских хозяйств, с которыми <br>
+              нас связывает долговременное сотрудничество.</li>
+              <li class="description__item description__item--leaf">Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты <br> и добавки произведены из натурального сырья.</li>
+              <li class="description__item description__item--thermometer">Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.</li>
+            </ul>
+          </div>
         </section>
         <div class="newsletter-container">
           <article class="news">
             <h3 class="news__title">Новое в нашем блоге</h3>
-            <p class="news__name">10 способов сервировки фруктовых щербетов к столу</p>
+            <a class="news__link" href="#" target="_blank">10 способов сервировки фруктовых щербетов <br> к столу</a>
           </article>
           <section class="newsletter">
             <h3 class="visually-hidden">Подпишитесь на нашу рассылку</h3>
