--- a/index.html
+++ b/index.html
@@ -218,13 +218,15 @@
             <a class="news__link" href="#" target="_blank">10 способов сервировки фруктовых щербетов <br> к столу</a>
           </article>
           <section class="newsletter">
-            <h3 class="visually-hidden">Подпишитесь на нашу рассылку</h3>
-            <p class="newsletter__description">Подпишитесь на нашу сладкую рассылку и будьте всегда
-            в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-            <form action="https://echo.htmlacademy.ru/" method="post" class="newsletter__form">
-              <input type="email" name="email" placeholder="email@example.com">
-              <button type="submit">Отправить</button>
-            </form>
+            <div class="newsletter__content">
+              <h3 class="visually-hidden">Подпишитесь на нашу рассылку</h3>
+              <p class="newsletter__description">Подпишитесь на нашу сладкую рассылку и будьте всегда <br>
+              в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+              <form class="newsletter__form form" action="https://echo.htmlacademy.ru/" method="post">
+                <input class="form__input newsletter__input" type="email" name="email" placeholder="email@example.com">
+                <button class=" button button--extra" type="submit">Отправить</button>
+              </form>
+            </div>
           </section>
         </div>
         <section class="delivery">
