Стилизация футера, проверка по pixel perfect

--- a/index.html
+++ b/index.html
@@ -317,11 +317,11 @@
           </ul>
         </nav>
         <div class="footer__credits credits">
-          <a href="https://htmlacademy.ru/" target="_blank" class="footer__html-academy-logo">
+          <a class="footer__html-academy-logo" href="https://htmlacademy.ru/" target="_blank">
             <img src="img/logo-htmlacademy.svg" alt="Логотип HTML-академии" width="93" height="26">
           </a>
           <p class="credits__description">Сделано в
-            <a href="https://htmlacademy.ru/" target="_blank">.html academy</a>
+            <a class="credits__link" href="https://htmlacademy.ru/" target="_blank">.html academy</a>
             &copy; 2021</p>
         </div>
       </div>
