Закончена стилизация состояний фильтра

--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,7 @@
             </a>
           </li>
           <li class="navigation__item navigation-user__item">
-            <a class="navigation__link navigation-user__link navigation-user__link--login popup-opened" href="#">
+            <a class="navigation__link navigation-user__link navigation-user__link--login" href="#">
               <svg class="navigation__link-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M9 1.67c0-.37.3-.67.67-.67h2.66a2 2 0 0 1 2 2v9.33a2 2 0 0 1-2 2H9.67a.67.67 0 1 1 0-1.33h2.66a.67.67 0 0 0 .67-.67V3a.67.67 0 0 0-.67-.67H9.67A.67.67 0 0 1 9 1.67Zm-3.14 2.2a.67.67 0 0 1 .94 0l3.33 3.32a.69.69 0 0 1 .13.18.66.66 0 0 1-.13.77L6.8 11.47a.67.67 0 1 1-.94-.94l2.2-2.2h-6.4a.67.67 0 1 1 0-1.33h6.4l-2.2-2.2a.67.67 0 0 1 0-.94Z"/></svg>
               <span>Вход</span>
             </a>
@@ -93,9 +93,11 @@
                 <div class="range-bar" style="left: 31px;
                 width: 66px;">
                   <button class="range-toggle toggle-min" type="button">
+                    <svg class="range-toggle-icon" width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="8" cy="8" r="8"/><circle cx="8" cy="8" r="2"/></svg>
                     <span class="visually-hidden">Изменить минимальную цену.</span>
                   </button>
                   <button class="range-toggle toggle-max" type="button">
+                    <svg class="range-toggle-icon" width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="8" cy="8" r="8"/><circle cx="8" cy="8" r="2"/></svg>
                     <span class="visually-hidden">Изменить максимальную цену.</span>
                   </button>
                 </div>
